--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "description": "SpringType node module dependency resolution implementation. Used by SpringType Bundler/Compiler.",
   "scripts": {
     "clean": "npx st-rm-rf dist",
+    "prebuild": "yarn clean",
     "build": "tsc && cp package.json dist && cp -r node_modules dist",
     "test": "jest --verbose",
-    "prerelease": "yarn build",
     "release": "npm login",
     "postrelease": "npm publish"
   },
